# AdventureBoard

./: .gitignore  README.md  app.py  client_secret_20216327048-4r9rb9bo940s4i57m9hujj5cpda695vt.apps.googleusercontent.com.json  config.example  docker-compose.yaml  flake.nix  index.html  maskfile.md  nginx.conf  ranking_tools.py
backend/: .dockerignore  Dockerfile  app.cgi  docker-compose.yaml  fix_db.py  main.py  pyproject.toml  requirements.txt  setup_mock_db.sh
backend/app/: __init__.py  api.py  email.py  models.py  util.py
backend/app/config/: config.example
backend/app/static/css/: help.css
backend/app/static/js/: profile.js
backend/app/templates/: app.html  help.html  profile.html
backend/migrations/versions/: a1601ab07798_make_place_postion_int.py  a2dfefe4b9f1_add_is_waitinglist.py  add_adventure_requested_players.py  add_is_story_adventure.py  add_notification_toggles_and_fcm_tokens.py  b7f7b6f7a2b1_add_exclude_from_karma.py  fix_assignments_top_three.py
backend/tests/: conftest.py  test_admin_api.py  test_api.py  test_dates.py  test_karma.py
board/: Dockerfile  docker-compose.yaml  entrypoint.sh  index.html  main.py  nginx.conf  requirements.txt
cgi-bin/: api.py  app.cgi  app.py  auth_tools.py  config.example  config.ini  config.json  models.py  provider.py  ranking_tools.py  requirements.txt  timing_tools.py  util.py
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  quasar.config.js
migrations/: env.py
old/: auth_tools.py  index_old.html  login.html  login.js  old_api.py  schema.sql
public/: app.html  help.html  (+2 more)
(+58 files in other folders)
